tests/NormalTests/paczka1/fuzzy1/41732677.err
Error in line 16: QzPFET S266 68,2
Error in line 17: lquSPwX0 A680 89,9
